--- a/src/components/covid19cases/style.module.scss
+++ b/src/components/covid19cases/style.module.scss
@@ -9,6 +9,9 @@
 }
 
 .latest-numbers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 1.25rem;
   font-weight: 800;
   margin-bottom: 1rem;
@@ -16,12 +19,12 @@
   width: 100px;
   height: 100px;
   border-radius: 100%;
-  line-height: 5;
+  line-height: 1.1;
   text-align: center;
+  word-break: break-all;
 
   @media (min-width: 600px) {
-    font-size: 2.5rem;
-    line-height: 5;
+    font-size: 3ch;
     width: 200px;
     height: 200px;
   }
